--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,6 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+actualite_politique:
+    path: /actualite-politique
+    controller: App\Controller\ActualitePolitiqueController::index
